[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transitlyiq"
version = "1.0.0"
description = "Takshashila Transit Bus Management System"
authors = [
  { name="Venkata Siva Rami Reddy Taadi" },
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "huggingface_hub",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
